--- a/docs/examples/demo_apps/email_mcp/mcp_server/pyproject.toml
+++ b/docs/examples/demo_apps/email_mcp/mcp_server/pyproject.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 requires-python = ">=3.10, <3.14"
 dependencies = [
     "pydantic",
-    "fastmcp==2.13.2"
+    "fastmcp>=2.14.0"
 ]
 
 [tool.uv]
