--- a/docs/examples/demo_apps/file_system/pyproject.toml
+++ b/docs/examples/demo_apps/file_system/pyproject.toml
@@ -9,7 +9,7 @@ description = "Secure MCP Filesystem Server - Python implementation using FastMC
 license = "Apache-2.0"
 requires-python = ">=3.10, <3.14"
 dependencies = [
-    "fastmcp==2.13.2"
+    "fastmcp>=2.14.0"
 ]
 
 [tool.uv]
