--- a/src/frontend_workspaces/package.json
+++ b/src/frontend_workspaces/package.json
@@ -19,14 +19,17 @@
     "puppeteer": "^24.22.3"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "lodash-es": "^4.17.23"
   },
   "pnpm": {
     "overrides": {
       "tar-fs": "^3.1.1",
       "node-forge": "^1.3.2",
       "glob": "^10.5.0",
-      "mdast-util-to-hast": "^13.2.1"
+      "mdast-util-to-hast": "^13.2.1",
+      "lodash-es": "^4.17.23",
+      "qs": "^6.14.1"
     }
   }
 }
